docs: add Crypto.com Exchange setup guide and env template
- Add CRYPTOCOM_SETUP.md with detailed setup instructions
- Update .env.example with Crypto.com credentials template
- Include testnet/sandbox configuration guidance

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,11 @@ COINBASE_API_SECRET=
 COINBASE_PASSPHRASE=
 COINBASE_SANDBOX=true
 
+# Crypto.com Exchange
+CRYPTOCOM_API_KEY=
+CRYPTOCOM_API_SECRET=
+CRYPTOCOM_TESTNET=true
+
 # Gemini
 GEMINI_API_KEY=
 GEMINI_API_SECRET=
