--- a/config/strategies/strategy_config.json
+++ b/config/strategies/strategy_config.json
@@ -107,7 +107,7 @@
     "vg_crypto_btc": {
       "enabled": true,
       "parameters": {
-        "symbol": "BTC",
+        "symbol": "BTC/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
@@ -122,7 +122,7 @@
     "vg_crypto_eth": {
       "enabled": true,
       "parameters": {
-        "symbol": "ETH",
+        "symbol": "ETH/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
@@ -137,7 +137,7 @@
     "vg_crypto_xrp": {
       "enabled": true,
       "parameters": {
-        "symbol": "XRP",
+        "symbol": "XRP/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
@@ -152,7 +152,7 @@
     "vg_crypto_doge": {
       "enabled": true,
       "parameters": {
-        "symbol": "DOGE",
+        "symbol": "DOGE/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
@@ -167,7 +167,7 @@
     "vg_crypto_shib": {
       "enabled": true,
       "parameters": {
-        "symbol": "SHIB",
+        "symbol": "SHIB/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
@@ -182,7 +182,7 @@
     "vg_crypto_trump": {
       "enabled": true,
       "parameters": {
-        "symbol": "TRUMP",
+        "symbol": "TRUMP/USDT",
         "session_lookback": 96,
         "ema_period": 20,
         "cooldown_candles": 8,
