--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
   api:
     build: .
     container_name: trading_bot_api
-    command: uvicorn api.server:app --host 0.0.0.0 --port 8000
+    command: uvicorn bot.api.server:app --host 0.0.0.0 --port 8000
     environment:
       - API_HOST=${API_HOST:-0.0.0.0}
       - API_PORT=${API_PORT:-8000}
